Обновление главного HTML-шаблона и стилей компонентов: изменен язык на русский, добавлены SEO мета-теги, улучшены стили кнопок и заголовков с использованием градиентов, добавлены адаптивные стили для мобильных устройств. Обновлен шаблон боковой панели с логотипом и описанием.

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,51 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Calendar</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <title>КНГК - Умное Расписание | Расписание занятий и преподавателей</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Умное расписание для КНГК - удобный доступ к расписанию занятий и информации о преподавателях в одном месте"
+    />
+    <meta
+      name="keywords"
+      content="КНГК, расписание, колледж, нефть, газ, занятия, преподаватели"
+    />
+    <meta name="author" content="КНГК" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://knpk-schedule.ru/" />
+    <meta property="og:title" content="КНГК - Умное Расписание" />
+    <meta
+      property="og:description"
+      content="Умное расписание для КНГК - удобный доступ к расписанию занятий и информации о преподавателях"
+    />
+    <meta property="og:image" content="assets/images/logo.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://knpk-schedule.ru/" />
+    <meta property="twitter:title" content="КНГК - Умное Расписание" />
+    <meta
+      property="twitter:description"
+      content="Умное расписание для КНГК - удобный доступ к расписанию занятий и информации о преподавателях"
+    />
+    <meta property="twitter:image" content="assets/images/logo.svg" />
+
+    <!-- Icons -->
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg" />
+    <link rel="alternate icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="assets/images/favicon.svg" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#4F46E5" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
